# chatbot

./: README.md
src/: chatbot.py
src/chatbot/: package.xml  setup.py
src/chatbot/chatbot/: chatbot.py
src/install/: local_setup.sh  setup.sh
src/install/chatbot/share/chatbot/: package.sh
src/install/my-test-package/share/my-test-package/: package.sh
src/log/: latest_build
