<package format="3">
  <name>chatbot</name>
  <version>0.0.0</version>
  <description>Pacote para chatbot utilizando ROS 2</description>

  <maintainer email="seu_email@exemplo.com">Seu Nome</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
